File tree changes

--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search :3</title>
-    <link rel="icon" href="../img/Heart-icon.png" />
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
-  </head>
+    <link rel="icon" href="/Heart-icon.png" />
+    <link rel="stylesheet" type="text/css" href="/style.css" />
+</head>
 
-  <body>
+<body>
     <section class="section-1">
-      <div id="messageDiv"></div>
-      <script src="script.js"></script>
-      <div class="s-box">
-        <form action="https://www.google.com/search" method="GET">
-          <input type="text" name="q" class="s-input" />
-        </form>
-      </div>
+        <div id="messageDiv"></div>
+        <script src="script.js"></script>
+        <div class="s-box">
+            <form action="https://www.google.com/search" method="GET">
+                <input type="text" name="q" class="s-input" />
+            </form>
+        </div>
     </section>
-  </body>
+</body>
+
 </html>
