--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search :3</title>
     <link rel="icon" href="/Heart-icon.png" />
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="../landing-page-for-gf/style.css" />
 </head>
 
 <body>
