--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search :3</title>
-    <link rel="icon" href="/Heart-icon.png" />
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="icon" href="Heart-icon.png" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
